--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.AlphaBet" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="elevationOverlayEnabled">false</item>
         <!-- Primary brand color. -->
-<!--        <item name="colorPrimary">#0077b6</item>-->
-        <!--        <item name="colorOnPrimary">@color/white</item>-->
+        <item name="colorPrimary">#3d5a80</item>
         <!-- Secondary brand color. -->
-        <item name="colorPrimary">#457B9D</item>
-        <item name="colorSecondary">#457b9d</item>
-        <item name="colorSecondaryContainer">#B9D2E8</item>
+        <item name="colorSecondary">#006d77</item>
+        <item name="colorSecondaryContainer">#98c1d9</item>
+<!--        <item name="colorPrimary">#457B9D</item>-->
+<!--        <item name="colorSecondary">#457b9d</item>-->
+<!--        <item name="colorSecondaryContainer">#B9D2E8</item>-->
         <!--        <item name="colorSecondaryVariant">@color/light_blue_900</item>-->
         <!--        <item name="colorOnSecondary">@color/black</item>-->
         <!--        <item name="colorPrimaryContainer">@color/white</item>-->
@@ -23,6 +25,8 @@
         <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
         <item name="tabStyle">@style/Widget.App.TabLayout</item>
         <item name="materialDividerStyle">@style/Widget.App.MaterialDivider</item>
+        <item name="appBarLayoutStyle">@style/Widget.App.AppBarLayout</item>
+        <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
 <!--        <item name="materialAlertDialogTheme">@style/ThemeOverlay.App.MaterialAlertDialog</item>-->
     </style>
 
@@ -30,15 +34,13 @@
     <!--        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Toolbar</item>-->
     <!--    </style>-->
 
-    <color name="secondary_background">@color/gray_background</color>
+    <color name="secondary_background">@color/grey_background</color>
     <color name="color_on_surface_alpha">@color/grey_300</color>
+    <color name="indicator_chip_bg">@color/grey_200</color>
 
-<!--    <style name="ThemeOverlay.App.Toolbar" parent="">-->
-<!--        <item name="colorPrimary">@color/gray_background</item>-->
-<!--        <item name="colorOnPrimary">?attr/colorOnSurface</item>-->
-<!--    </style>-->
-
-
+    <style name="ThemeOverlay.App.BottomNavigationView" parent="">
+        <item name="colorSurface">#E8EAF6</item>
+    </style>
 
 <!--    <style name="ThemeOverlay.App.MaterialAlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">-->
 <!--        <item name="materialAlertDialogTitleTextStyle">@style/MaterialAlertDialog.App.Title.Text-->
