--- a/app/src/main/res/layout/dialog_time_period.xml
+++ b/app/src/main/res/layout/dialog_time_period.xml
@@ -34,7 +34,8 @@
             android:id="@+id/text_end_date"
             style="@style/select_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="textNoSuggestions"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -55,7 +56,8 @@
             android:id="@+id/text_start_date"
             style='@style/select_button'
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="textNoSuggestions"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
