--- a/app/src/main/res/layout/fragment_backtest_strategy_input.xml
+++ b/app/src/main/res/layout/fragment_backtest_strategy_input.xml
@@ -8,42 +8,43 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/DisableLiftOnScroll">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/top_app_bar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-                app:menu="@menu/date_confirm_app_bar"
                 app:title="Choose Strategy" />
         </com.google.android.material.appbar.AppBarLayout>
-
-        <include
-            android:id="@+id/strategy_list"
-            layout="@layout/fragment_my_strategy"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_strategy_input"
+            <include
+                android:id="@+id/strategy_list"
+                layout="@layout/fragment_my_strategy"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/app_bar_run_strategy"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:itemCount="3"
-                tools:listitem="@layout/backtest_strategy_input_row" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <!--            <androidx.recyclerview.widget.RecyclerView-->
+            <!--                android:id="@+id/rv_strategy_input"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="0dp"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toTopOf="parent"-->
+            <!--                tools:itemCount="3"-->
+            <!--                tools:listitem="@layout/backtest_strategy_input_row" />-->
 
             <include
                 android:id="@+id/view_empty_strategy"
@@ -52,13 +53,44 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 app:image="@{@drawable/ic_baseline_emoji_objects_24}"
+                app:noButton="@{true}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.3"
-                app:text="@{@string/add_strategy}"
-                tools:visibility="visible" />
+                app:text="@{@string/add_strategy}" />
+
+            <LinearLayout
+                android:id="@+id/app_bar_run_strategy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="1"
+                android:paddingVertical="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <Button
+                    android:id="@+id/button_adv_opt"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_weight="0.5"
+                    android:text="Advanced Options" />
+
+                <Button
+                    android:id="@+id/button_run_strategy"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/run_strategy" />
+
+            </LinearLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
