--- a/app/src/main/res/layout/fragment_edit_strategy.xml
+++ b/app/src/main/res/layout/fragment_edit_strategy.xml
@@ -28,7 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +67,7 @@
             <TextView
                 android:id="@+id/text_strategy_title"
                 style="@style/TextAppearance.Material3.TitleLarge"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
