--- a/app/src/main/res/layout/layout_empty_list.xml
+++ b/app/src/main/res/layout/layout_empty_list.xml
@@ -23,8 +23,8 @@
         android:gravity="center">
         <ImageView
             android:id="@+id/image_empty_list"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:src="@{image}"
             tools:src="@drawable/ic_outline_analytics_24"
             app:tint="@color/color_on_surface_alpha"
@@ -35,6 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{text}"
+            style="@style/TextAppearance.Material3.BodyMedium"
+            android:textColor="?attr/colorOnSurfaceVariant"
             tools:text="@string/empty_backtest"
             />
         <Button
@@ -42,9 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
-            android:text="Add"
+            android:text="@string/add"
             android:visibility="@{noButton ? View.GONE : View.VISIBLE}"
-            style="@style/Widget.Material3.Button.ElevatedButton"
             app:icon="@drawable/ic_baseline_add_24"/>
     </LinearLayout>
 
