--- a/app/src/main/res/layout/rule_card.xml
+++ b/app/src/main/res/layout/rule_card.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Widget.Material3.CardView.Elevated"
+    app:cardElevation="0dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
@@ -88,7 +89,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:text="@string/delete_button"
-            style="@style/Widget.Material3.Button.OutlinedButton"
             app:icon="@drawable/ic_outline_delete_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_secondary" />
