--- a/app/src/main/res/layout/rule_desc_card.xml
+++ b/app/src/main/res/layout/rule_desc_card.xml
@@ -11,7 +11,9 @@
         type="android.graphics.drawable.Drawable" />
     </data>
     <com.google.android.material.card.MaterialCardView
-        style="@style/Widget.Material3.CardView.Elevated"
+        style="@style/Widget.Material3.CardView.Filled"
+        app:cardBackgroundColor="@color/secondary_background"
+        app:cardCornerRadius="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
