--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
 <!--    <color name="c2">#EE7733</color>-->
 <!--    <color name="c3">#009988</color>-->
 <!--    <color name="c4">#9467bd</color>-->
-    <color name="gray_background">#F5F5F5</color>
+    <color name="grey_background">#0D000000</color>
     <color name="plotColor1">#277da1</color>
     <color name="plotColor2">#E76F51</color>
     <color name="plotColor3">#2A9D8F</color>
@@ -37,8 +37,11 @@
     <color name="plotColor7">#f94144</color>
     <color name="dark_grey">#212121</color>
     <color name="grey_50">#fafafa</color>
+    <color name="grey_200">#EEEEEE</color>
     <color name="grey_300">#e0e0e0</color>
     <color name="grey_400">#bdbdbd</color>
     <color name="grey_800">#424242</color>
+    <color name="grey_900">#212121</color>
     <color name="grey_500">#9e9e9e</color>
+    <color name="grey_alpha_20">#33000000</color>
 </resources>
