--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,14 @@
 <resources>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="chip_legend_width">170dp</dimen>
+
+    <!--    table view-->
+    <dimen name="cell_height">40dp</dimen>
+    <dimen name="row_header_width">55dp</dimen>
+    <dimen name="text_size">12sp</dimen>
+    <dimen name="cell_margin">8dp</dimen>
+
+    <!-- Overriding the default values of the tableView -->
+    <dimen name="default_row_header_width">55dp</dimen>
+    <dimen name="default_column_header_height">40dp</dimen>
 </resources>
